--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="utf-8">
         <title>石曽根毅のホームページ</title>
-        <meta name="description" content="石曽根毅">
+        <meta name="description" content="明治大学大学院 先端数理科学研究科 現象数理学専攻 博士後期課程に在学する石曽根毅のホームページ">
         <meta name="author" content="Tsuyoshi Ishizone">
         <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"> -->
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -76,7 +76,7 @@
         <ul>
             <li>第12回明治大学大学院長賞 受賞（研究科内から2名）．2021年3月．</li>
             <li>情報処理学会第83回全国大会 学生奨励賞 2件 受賞（審査対象7件中2件，審査対象8件中2件），2021年3月．</li>
-            <li>2020 年度統計関連学会連合大会 コンペティション講演 <strong>最優秀報告賞 受賞</strong>>（審査対象37件中1件），2020年9月．</li>
+            <li>2020 年度統計関連学会連合大会 コンペティション講演 <strong>最優秀報告賞 受賞</strong>（審査対象37件中1件），2020年9月．</li>
             <li>第24回データ同化夏の学校 優秀発表賞 受賞，2020年8月．</li>
             <li>明治大学大学院 研究奨励奨学金B（各研究科から入学成績優秀者上位10名程度），2019年8月．</li>
             <li>明治大学 総合数理学部 総代（<strong>首席卒業</strong>），2019年3月．</li>
