--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
         </ul>
 
 
-        <h2>発表歴</h2>
+        <h2>論文</h2>
+        <ul>
+            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+                “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
+                International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
+                <a href="https://link.springer.com/chapter/10.1007/978-3-030-58653-9_33">SpringerLink</a></li>
+            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+                "Real-time Linear Operator Construction and State Estimation with the Kalman Filter",
+                arXiv preprint arXiv:2001.11256, 2020.
+                <a href="https://arxiv.org/abs/2001.11256">arXiv</a></li>
+        </ul>
+
+
+        <h2>発表</h2>
         <h3>国際発表</h3>
         <ul>
             <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
@@ -72,7 +85,7 @@
         </ul>
 
 
-        <h2>受賞歴</h2>
+        <h2>受賞</h2>
         <ul>
             <li>第12回明治大学大学院長賞 受賞（研究科内から2名）．2021年3月．</li>
             <li>情報処理学会第83回全国大会 学生奨励賞 2件 受賞（審査対象7件中2件，審査対象8件中2件），2021年3月．</li>
