--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>石曽根毅のホームページ</title>
         <meta name="description" content="明治大学大学院 先端数理科学研究科 現象数理学専攻 博士後期課程に在学する石曽根毅のホームページ">
         <meta name="author" content="Tsuyoshi Ishizone">
+        <link rel="shortcut icon" href="figs/tennis.jpg" type="image/x-icon">
         <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"> -->
         <link rel="stylesheet" href="style.css">
     </head>
@@ -14,6 +15,7 @@
         <h1>石曽根毅のマイページ</h1>
 
         <h2>経歴</h2>
+        <img src="figs/myfig.jpg" alt="顔写真" style="float:right">
         <ul>
             <li>2015年3月：明治大学付属明治高等学校 卒業</li>
             <li>2019年3月：明治大学 総合数理学部 現象数理学科 卒業</li>
@@ -96,6 +98,15 @@
             <li>統計検定1級「統計数理」優秀成績賞 受賞，2018年12月．</li>
             <li>明治大学付属明治高等学校 優秀賞 受賞（<strong>首席卒業</strong>），2015年3月．</li>
             <li>第6回IIBCエッセイコンテスト学校奨励賞（本選出場），2014年11月．</li>
+        </ul>
+
+
+        <h2>ソフトウェア・パッケージ</h2>
+        <ul>
+            <li>python 用データ同化パッケージ pyassim，
+                <a href="https://github.com/ZoneTsuyoshi/pyassim">GitHub</a>
+                <a href="https://pypi.org/project/pyassim/">PyPI</a>
+            </li>
         </ul>
     </body>
 </html>
