--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>石曽根毅のマイページ</h1>
 
         <h2>経歴</h2>
-        <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;">
+        <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
         <ul>
             <li>2015年3月：明治大学付属明治高等学校 卒業</li>
             <li>2019年3月：明治大学 総合数理学部 現象数理学科 卒業</li>
@@ -103,7 +103,7 @@
 
         <h2>ソフトウェア・パッケージ</h2>
         <ul>
-            <li>python 用データ同化パッケージ pyassim，
+            <li>python 用データ同化パッケージ pyassim
                 <a href="https://github.com/ZoneTsuyoshi/pyassim">GitHub</a>
                 <a href="https://pypi.org/project/pyassim/">PyPI</a>
             </li>
