--- a/index.html
+++ b/index.html
@@ -58,11 +58,20 @@
         <h3>国内発表</h3>
         <ul>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
+                逐次ベイズフィルタによる潜在時系列モデルの変分推論，
+                第24回情報論的学習理論ワークショップ，No. 96，オンライン開催，2021年11月</li>
+            <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
+                Ensemble Kalman Filter を活用した時系列モデルの変分推論フレームワーク，
+                2020年度統計関連学会連合大会，p.193，オンライン開催，2021年9月</li>
+            <li><strong>石曽根毅</strong>．
+                Variational Inference of Time-Series Model by Bayesian Filter，
+                統計サマーセミナー，オンライン開催，2021年8月</li>
+            <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 変分推論・非線形フィルタリングを駆使した時系列データの潜在モデルの推論・予測，
-                4J-03，オンライン開催，2020年3月</li>
+                情報処理学会全国大会，4J-03，オンライン開催，2020年3月</li>
             <li><strong>石曽根毅</strong>，中村和幸．
                 LSLOCK による気象レーダーデータの リアルタイムなノイズ除去・短期予測，
-                5J-03，オンライン開催，2020年3月</li>
+                情報処理学会全国大会，5J-03，オンライン開催，2020年3月</li>
             <li>大島悠，<strong>石曽根毅</strong>，樋口知之．
                 一般家庭用電力スマートメーターへの適用を目的とする世帯の在宅推定手法の開発，
                 第15回統計学会春季集会，1C01-32-32，オンライン，2021年3月．</li>
