add info of kyudai seminar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
         <ul>
             <li>2015年3月：明治大学付属明治高等学校 卒業</li>
-            <li>2019年3月：明治大学 総合数理学部 現象数理学科 卒業</li>
-            <li>2019年3月：明治大学大学院 先端数理科学研究科 現象数理学専攻 博士前期課程 修了</li>
+            <li>2019年3月：明治大学 総合数理学部 現象数理学科 卒業（学士 理学）</li>
+            <li>2019年3月：明治大学大学院 先端数理科学研究科 現象数理学専攻 博士前期課程 修了（修士 数理科学）</li>
             <li>2021年4月〜：明治大学大学院 先端数理科学研究科 現象数理学専攻 博士後期課程 在籍</li>
         </ul>
 
@@ -93,6 +93,13 @@
             <li><strong>石曽根毅</strong>，中村和幸．
                 Kalman Filter for Real-Time Transition Matrix Update with Linear Gaussian Observation Transition，
                 第13回統計学会春季集会，Poster no.24，東京，2019年3月．</li>
+        </ul>
+
+        <h3>セミナー</h3>
+        <ul>
+            <li><strong>石曽根毅</strong>．
+                逐次データ同化技術と変分推論の協働によるモデル推論，
+                <a href="https://www2.math.kyushu-u.ac.jp/stat/meeting.html">2021年度 統計データサイエンス研究集会</a>，オンライン開催，2021年12月</li>
         </ul>
 
 
