add info of presen

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
     <body>
         <h1>石曽根毅のマイページ</h1>
 
-        <h2>経歴</h2>
+        <h2>学歴・学位</h2>
         <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
         <ul>
             <li>2015年3月：明治大学付属明治高等学校 卒業</li>
             <li>2019年3月：明治大学 総合数理学部 現象数理学科 卒業（学士 理学）</li>
             <li>2019年3月：明治大学大学院 先端数理科学研究科 現象数理学専攻 博士前期課程 修了（修士 数理科学）</li>
             <li>2021年4月〜：明治大学大学院 先端数理科学研究科 現象数理学専攻 博士後期課程 在籍</li>
+        </ul>
+
+
+        <h2>職歴</h2>
+        <ul>
+            <li>2021年4月〜：明治大学 総合数理学部 助手</li>
         </ul>
 
 
@@ -41,6 +47,9 @@
         <h3>国際発表</h3>
         <ul>
             <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
+                "Improving Inference of Time-Series Model by Sequential Bayes Filtering", 
+                The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2021.</li>
+            <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
                 “A Method to Infer Latent Dynamics Model by Combining Deep Neural Networks with Ensemble Kalman Filter”, 
                 The 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2020.</li>
             <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
@@ -57,6 +66,9 @@
 
         <h3>国内発表</h3>
         <ul>
+            <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
+                深層生成モデルによる時系列モデルの同定，
+                情報処理学会全国大会，2A-05，愛媛・オンライン，2021年3月</li>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 逐次ベイズフィルタによる潜在時系列モデルの変分推論，
                 第24回情報論的学習理論ワークショップ，No. 96，オンライン開催，2021年11月</li>
