--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 
         <h2>論文</h2>
+        <h3>英語論文</h3>
         <ul>
             <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
                 “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
@@ -41,6 +42,7 @@
                 arXiv preprint arXiv:2001.11256, 2020.
                 <a href="https://arxiv.org/abs/2001.11256">arXiv</a></li>
         </ul>
+        <h3>日本語論文</h3>
 
 
         <h2>発表</h2>
@@ -48,7 +50,7 @@
         <ul>
             <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
                 "Improving Inference of Time-Series Model by Sequential Bayes Filtering", 
-                The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2021.</li>
+                The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2022.</li>
             <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
                 “A Method to Infer Latent Dynamics Model by Combining Deep Neural Networks with Ensemble Kalman Filter”, 
                 The 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2020.</li>
@@ -67,23 +69,29 @@
         <h3>国内発表</h3>
         <ul>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
+                逐次フィルタリングを用いた逐次変分自己符号化器の効率的な学習フレームワーク，
+                人工知能学会全国大会，1D1-GS-2-01，京都・オンライン，2022年6月</li>
+            <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
+                逐次変分自己符号化器の効率的な学習アルゴリズム，
+                第20回コンピューテーショナル・インテリジェンス研究会，兵庫，2022年6月</li>
+            <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 深層生成モデルによる時系列モデルの同定，
-                情報処理学会全国大会，2A-05，愛媛・オンライン，2021年3月</li>
+                情報処理学会全国大会，2A-05，愛媛・オンライン，2022年3月</li>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 逐次ベイズフィルタによる潜在時系列モデルの変分推論，
-                第24回情報論的学習理論ワークショップ，No. 96，オンライン開催，2021年11月</li>
+                第24回情報論的学習理論ワークショップ，No. 96，オンライン，2021年11月</li>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 Ensemble Kalman Filter を活用した時系列モデルの変分推論フレームワーク，
-                2020年度統計関連学会連合大会，p.193，オンライン開催，2021年9月</li>
+                2020年度統計関連学会連合大会，p.193，オンライン，2021年9月</li>
             <li><strong>石曽根毅</strong>．
                 Variational Inference of Time-Series Model by Bayesian Filter，
                 統計サマーセミナー，オンライン開催，2021年8月</li>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 変分推論・非線形フィルタリングを駆使した時系列データの潜在モデルの推論・予測，
-                情報処理学会全国大会，4J-03，オンライン開催，2020年3月</li>
+                情報処理学会全国大会，4J-03，オンライン，2020年3月</li>
             <li><strong>石曽根毅</strong>，中村和幸．
                 LSLOCK による気象レーダーデータの リアルタイムなノイズ除去・短期予測，
-                情報処理学会全国大会，5J-03，オンライン開催，2020年3月</li>
+                情報処理学会全国大会，5J-03，オンライン，2020年3月</li>
             <li>大島悠，<strong>石曽根毅</strong>，樋口知之．
                 一般家庭用電力スマートメーターへの適用を目的とする世帯の在宅推定手法の開発，
                 第15回統計学会春季集会，1C01-32-32，オンライン，2021年3月．</li>
@@ -92,10 +100,10 @@
                 日本数学異分野・異業種研究交流会2020，Poster no.70，オンライン，2020年10月</li>
             <li><strong>石曽根毅</strong>，中村和幸．
                 時空間高次元データに対するリアルタイムな状態空間モデル推定，
-                2020年度統計関連学会連合大会，p.268，オンライン開催，2020年9月．</li>
+                2020年度統計関連学会連合大会，p.268，オンライン，2020年9月．</li>
             <li><strong>石曽根毅</strong>，中村和幸．
                 時空間連続性を用いたリアルタイムな動画像のノイズ除去，
-                情報処理学会全国大会，6M-02，オンライン開催，2020年3月．</li>
+                情報処理学会全国大会，6M-02，オンライン，2020年3月．</li>
             <li><strong>石曽根毅</strong>，中村和幸．
                 状態空間モデルにおける状態遷移行列のリアルタイム推定，
                 日本数学会異分野・異業種研究交流会2019，Poster no.43，東京，2019年10月．</li>
