--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                 arXiv preprint arXiv:2001.11256, 2020.
                 <a href="https://arxiv.org/abs/2001.11256">arXiv</a></li>
         </ul>
+        その他，条件付き採択1件，投稿中2件
         <h3>日本語論文</h3>
-
+        その他，投稿中1件
 
         <h2>発表</h2>
         <h3>国際発表</h3>
@@ -144,5 +145,9 @@
                 <a href="https://pypi.org/project/pyassim/">PyPI</a>
             </li>
         </ul>
+
+
+        <h2>特許</h2>
+        その他，申請中1件
     </body>
 </html>
