--- a/index.html
+++ b/index.html
@@ -33,35 +33,50 @@
         <h2>論文</h2>
         <h3>英語論文</h3>
         <ul>
-            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
+                "An Online System of Detecting Anomalies and Estimating Cycle Times for Production Lines",
+                IEEE Industrial Electronics Society (IECON 2022), 2022.
+                </li>
+            <li>H. Oshima, <strong>T. Ishizone</strong>, K. Nakamura, and T. Higuchi. 
+                "Occupancy Detection for General Households by Bidirectional LSTM with Attention",
+                IEEE Industrial Electronics Society (IECON 2022), 2022.
+                </li>
+            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
                 International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
                 <a href="https://link.springer.com/chapter/10.1007/978-3-030-58653-9_33">SpringerLink</a></li>
-            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 "Real-time Linear Operator Construction and State Estimation with the Kalman Filter",
                 arXiv preprint arXiv:2001.11256, 2020.
                 <a href="https://arxiv.org/abs/2001.11256">arXiv</a></li>
         </ul>
-        その他，条件付き採択1件，投稿中2件
+        その他，条件付き採択1件，投稿中1件
         <h3>日本語論文</h3>
+        <ul>
+            <li>
+                大島悠，<strong>石曽根毅</strong>，樋口知之．
+                家庭用スマートメータへの適用を目的とする世帯の在宅推定手法の開発，
+                情報処理学会会誌「情報処理」Vol.63, No.8, 2022.
+            </li>
+        </ul>
         その他，投稿中1件
 
         <h2>発表</h2>
         <h3>国際発表</h3>
         <ul>
-            <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                 "Improving Inference of Time-Series Model by Sequential Bayes Filtering", 
                 The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2022.</li>
-            <li><strong>Ishizone, T.</strong>, Higuchi, T., and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                 “A Method to Infer Latent Dynamics Model by Combining Deep Neural Networks with Ensemble Kalman Filter”, 
                 The 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2020.</li>
-            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
                 International Conference on Automatic Control and Soft Computing (CONTROLO 2020), Braganza, July 2020.</li>
-            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
                 Bayes Comp 2020, Florida, January 2020.</li>
-            <li><strong>Ishizone, T.</strong>, and Nakamura, K. 
+            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “LPSUKF: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
                 International Conference on “Spatio-temporal patterns on various levels of the hierarchy of life” (ICMMA 2019), 
                 Poster no.16, Tokyo, December 2019.</li>
