--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>石曽根毅のホームページ</title>
         <meta name="description" content="明治大学大学院 先端数理科学研究科 現象数理学専攻 博士後期課程に在学する石曽根毅のホームページ">
         <meta name="author" content="Tsuyoshi Ishizone">
+        <meta name="google-site-verification" content="Pi44q8qMI93649FodMcUiID0i6rDOn7qTEnQZ6qggtM" />
         <link rel="shortcut icon" href="figs/tennis.jpg" type="image/x-icon">
         <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"> -->
         <link rel="stylesheet" href="style.css">
@@ -50,7 +51,7 @@
                 arXiv preprint arXiv:2001.11256, 2020.
                 <a href="https://arxiv.org/abs/2001.11256">arXiv</a></li>
         </ul>
-        その他，条件付き採択1件，投稿中1件
+        その他，採択1件，投稿中1件
         <h3>日本語論文</h3>
         <ul>
             <li>
@@ -59,7 +60,7 @@
                 情報処理学会会誌「情報処理」Vol.63, No.8, 2022.
             </li>
         </ul>
-        その他，投稿中1件
+        その他，条件付き採択1件
 
         <h2>発表</h2>
         <h3>国際発表</h3>
@@ -84,6 +85,9 @@
 
         <h3>国内発表</h3>
         <ul>
+            <li><strong>石曽根毅</strong>．
+                深層時系列生成モデルによる表現学習，
+                2022年度統計関連学会連合大会，p.48，東京・オンライン，2022年9月．</li>
             <li><strong>石曽根毅</strong>，樋口知之，中村和幸．
                 逐次フィルタリングを用いた逐次変分自己符号化器の効率的な学習フレームワーク，
                 人工知能学会全国大会，1D1-GS-2-01，京都・オンライン，2022年6月</li>
@@ -133,6 +137,9 @@
 
         <h3>セミナー</h3>
         <ul>
+            <li><strong>石曽根毅</strong>．
+                逐次変分自己符号化器による生体分子構造ダイナミクスの表現学習 ，
+                <a href="https://sites.google.com/view/ismstatphys/">統計物理と統計科学のセミナー</a>，オンライン開催，2022年11月</li>
             <li><strong>石曽根毅</strong>．
                 逐次データ同化技術と変分推論の協働によるモデル推論，
                 <a href="https://www2.math.kyushu-u.ac.jp/stat/meeting.html">2021年度 統計データサイエンス研究集会</a>，オンライン開催，2021年12月</li>
