--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
 
     <body>
-        <h1>石曽根毅のマイページ</h1>
+        <h1>石曽根毅</h1>
+        <p>石曽根毅（Tsuyoshi Ishizone）のマイページです．たまに更新します．</p>
 
         <h2>学歴・学位</h2>
         <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
@@ -171,5 +172,9 @@
 
         <h2>特許</h2>
         その他，申請中1件
+
+
+        <h2>連絡先</h2>
+        メールアドレス：tsuyoshi.ishizone at gmail.com
     </body>
 </html>
