--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>石曽根毅のホームページ</title>
+        <title>石曽根毅のマイページ</title>
         <meta name="description" content="明治大学大学院 先端数理科学研究科 現象数理学専攻 博士後期課程に在学する石曽根毅のホームページ">
         <meta name="author" content="Tsuyoshi Ishizone">
         <meta name="google-site-verification" content="Pi44q8qMI93649FodMcUiID0i6rDOn7qTEnQZ6qggtM" />
@@ -13,10 +13,10 @@
     </head>
 
     <body>
-        <h1>石曽根毅</h1>
-        <p>石曽根毅（Tsuyoshi Ishizone）のマイページです．たまに更新します．</p>
+        <h1>石曽根毅のマイページ（Homepage of Tsuyoshi Ishizone）</h1>
+        <p>石曽根毅（Tsuyoshi Ishizone）のマイページです．データサイエンス分野全般に興味があります．時系列データを扱っていることが多いですが，言語や画像データの分析経験もあります．</p>
 
-        <h2>学歴・学位</h2>
+        <h2>学歴・学位 (Educational Backgrounds)</h2>
         <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
         <ul>
             <li>2015年3月：明治大学付属明治高等学校 卒業</li>
@@ -26,66 +26,70 @@
         </ul>
 
 
-        <h2>職歴</h2>
+        <h2>職歴 (Careers)</h2>
         <ul>
             <li>2021年4月〜：明治大学 総合数理学部 助手</li>
         </ul>
 
 
-        <h2>論文</h2>
-        <h3>英語論文</h3>
+        <h2>論文 (Papers)</h2>
+        <h3>英語論文 (International Papers)</h3>
         <ul>
-            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
+            <li><strong>T. Ishizone</strong>, K. Nakamura.
+                "Real-time Linear Operator Construction and State Estimation with the Kalman Filter",
+                Journal of Information Processing (JIP), 2022.
+                <a href="https://www.jstage.jst.go.jp/article/ipsjjip/30/0/30_888/_article/-char/en">J-Stage</a></li>
+            <li><strong>T. Ishizone</strong>, T. Higuchi, K. Okusa, and K. Nakamura. 
                 "An Online System of Detecting Anomalies and Estimating Cycle Times for Production Lines",
-                IEEE Industrial Electronics Society (IECON 2022), 2022.
-                </li>
+                In IEEE Industrial Electronics Society (IECON 2022), 2022.
+                <a href="https://ieeexplore.ieee.org/document/9969061">IEEE Xplore</a></li>
             <li>H. Oshima, <strong>T. Ishizone</strong>, K. Nakamura, and T. Higuchi. 
                 "Occupancy Detection for General Households by Bidirectional LSTM with Attention",
-                IEEE Industrial Electronics Society (IECON 2022), 2022.
-                </li>
+                In IEEE Industrial Electronics Society (IECON 2022), 2022.
+                <a href="https://ieeexplore.ieee.org/document/9968594">IEEE Xplore</a></li>
             <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
+                In International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
                 <a href="https://link.springer.com/chapter/10.1007/978-3-030-58653-9_33">SpringerLink</a></li>
-            <li><strong>T. Ishizone</strong>, and K. Nakamura. 
-                "Real-time Linear Operator Construction and State Estimation with the Kalman Filter",
-                arXiv preprint arXiv:2001.11256, 2020.
-                <a href="https://arxiv.org/abs/2001.11256">arXiv</a></li>
         </ul>
-        その他，採択1件，投稿中1件
-        <h3>日本語論文</h3>
+        その他，投稿中1件
+        <h3>日本語論文 (Japanese Papers)</h3>
         <ul>
             <li>
                 大島悠，<strong>石曽根毅</strong>，樋口知之．
                 家庭用スマートメータへの適用を目的とする世帯の在宅推定手法の開発，
-                情報処理学会会誌「情報処理」Vol.63, No.8, 2022.
+                情報処理学会デジタルプラクティス, Vol. 60, No. 3, pp. 53--65, 2022.
+                <a href="https://www.ipsj.or.jp/dp/contents/publication/51/TR0303-06.html">情報処理学会</a>
             </li>
         </ul>
         その他，条件付き採択1件
 
-        <h2>発表</h2>
-        <h3>国際発表</h3>
+        <h2>発表 (Presentations and Posters)</h2>
+        <h3>国際発表 (International Presentations and Posters)</h3>
         <ul>
             <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                 "Improving Inference of Time-Series Model by Sequential Bayes Filtering", 
-                The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2022.</li>
+                In The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2022.</li>
             <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                 “A Method to Infer Latent Dynamics Model by Combining Deep Neural Networks with Ensemble Kalman Filter”, 
-                The 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2020.</li>
+                In The 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2020.</li>
             <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                International Conference on Automatic Control and Soft Computing (CONTROLO 2020), Braganza, July 2020.</li>
+                In International Conference on Automatic Control and Soft Computing (CONTROLO 2020), Braganza, July 2020.</li>
             <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                Bayes Comp 2020, Florida, January 2020.</li>
+                In Bayes Comp 2020, Florida, January 2020.</li>
             <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                 “LPSUKF: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                International Conference on “Spatio-temporal patterns on various levels of the hierarchy of life” (ICMMA 2019), 
+                In International Conference on “Spatio-temporal patterns on various levels of the hierarchy of life” (ICMMA 2019), 
                 Poster no.16, Tokyo, December 2019.</li>
         </ul>
 
-        <h3>国内発表</h3>
+        <h3>国内発表 (Japanese Presentations and Posters)</h3>
         <ul>
+            <li><strong>石曽根毅</strong>，松永康祐，渕上壮太郎，中村和幸．
+                生体分子構造の遅い運動を捉えるための表現学習，
+                第25回情報論的学習理論ワークショップ，Poster No. 2-021，つくば，2022年11月</li>
             <li><strong>石曽根毅</strong>．
                 深層時系列生成モデルによる表現学習，
                 2022年度統計関連学会連合大会，p.48，東京・オンライン，2022年9月．</li>
@@ -136,7 +140,7 @@
                 第13回統計学会春季集会，Poster no.24，東京，2019年3月．</li>
         </ul>
 
-        <h3>セミナー</h3>
+        <h3>セミナー講演 (Seminar Lectures)</h3>
         <ul>
             <li><strong>石曽根毅</strong>．
                 逐次変分自己符号化器による生体分子構造ダイナミクスの表現学習 ，
@@ -147,7 +151,7 @@
         </ul>
 
 
-        <h2>受賞</h2>
+        <h2>受賞 (Awards)</h2>
         <ul>
             <li>第12回明治大学大学院長賞 受賞（研究科内から2名）．2021年3月．</li>
             <li>情報処理学会第83回全国大会 学生奨励賞 2件 受賞（審査対象7件中2件，審査対象8件中2件），2021年3月．</li>
@@ -161,20 +165,21 @@
         </ul>
 
 
-        <h2>ソフトウェア・パッケージ</h2>
+        <h2>ソフトウェア・パッケージ (Softwares and Packages)</h2>
         <ul>
             <li>python 用データ同化パッケージ pyassim
                 <a href="https://github.com/ZoneTsuyoshi/pyassim">GitHub</a>
                 <a href="https://pypi.org/project/pyassim/">PyPI</a>
+                2019年．
             </li>
         </ul>
 
 
-        <h2>特許</h2>
+        <h2>特許 (Lisences)</h2>
         その他，申請中1件
 
 
-        <h2>連絡先</h2>
-        メールアドレス：tsuyoshi.ishizone at gmail.com
+        <h2>連絡先 (Contact)</h2>
+        メールアドレス (Mail Adress)：tsuyoshi.ishizone at gmail.com
     </body>
 </html>
