add carrier, award, presen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
         <h2>職歴 (Careers)</h2>
         <ul>
-            <li>2021年4月〜：明治大学 総合数理学部 助手</li>
+            <li>2019年5月〜：中央大学 研究補助員</li>
+            <li>2021年4月〜2023年3月：明治大学 総合数理学部 助手</li>
+            <li>2023年4月〜：日本学術振興会 特別研究員 DC2</li>
         </ul>
 
 
@@ -62,11 +64,17 @@
                 <a href="https://www.ipsj.or.jp/dp/contents/publication/51/TR0303-06.html">情報処理学会</a>
             </li>
         </ul>
-        その他，条件付き採択1件
+        その他，投稿中1件
 
         <h2>発表 (Presentations and Posters)</h2>
         <h3>国際発表 (International Presentations and Posters)</h3>
         <ul>
+            <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
+                "- Nonlinear Embeddings for Biomolecular Structure Data", 
+                In Bayes Comp 2023, Lévi, March 2023.</li>
+            <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
+                "Non-linear Embedding for Protein Dynamics by Accelerating Autocorrelation", 
+                In The 13-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Taipei, March 2023.</li>
             <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                 "Improving Inference of Time-Series Model by Sequential Bayes Filtering", 
                 In The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2022.</li>
@@ -143,7 +151,11 @@
         <h3>セミナー講演 (Seminar Lectures)</h3>
         <ul>
             <li><strong>石曽根毅</strong>．
-                逐次変分自己符号化器による生体分子構造ダイナミクスの表現学習 ，
+                生体分子構造(時系列)のための埋め込み手法，
+                <a href="https://sites.google.com/view/shokagaku/%E3%83%9B%E3%83%BC%E3%83%A0/22%E5%B9%B4%E5%BA%A6%E6%98%A5?authuser=0">諸科学における統計思考
+                </a>，オンライン開催，2023年3月</li>
+            <li><strong>石曽根毅</strong>．
+                逐次変分自己符号化器による生体分子構造ダイナミクスの表現学習，
                 <a href="https://sites.google.com/view/ismstatphys/">統計物理と統計科学のセミナー</a>，オンライン開催，2022年11月</li>
             <li><strong>石曽根毅</strong>．
                 逐次データ同化技術と変分推論の協働によるモデル推論，
@@ -153,6 +165,7 @@
 
         <h2>受賞 (Awards)</h2>
         <ul>
+            <li>Excellent Presentation Award, in The 13-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics. March, 2023.</li>
             <li>第12回明治大学大学院長賞 受賞（研究科内から2名）．2021年3月．</li>
             <li>情報処理学会第83回全国大会 学生奨励賞 2件 受賞（審査対象7件中2件，審査対象8件中2件），2021年3月．</li>
             <li>2020 年度統計関連学会連合大会 コンペティション講演 <strong>最優秀報告賞 受賞</strong>（審査対象37件中1件），2020年9月．</li>
@@ -177,7 +190,6 @@
 
         <h2>特許 (Lisences)</h2>
         その他，申請中1件
-
 
         <h2>連絡先 (Contact)</h2>
         メールアドレス (Mail Adress)：tsuyoshi.ishizone at gmail.com
