--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <a href="https://www.ipsj.or.jp/dp/contents/publication/51/TR0303-06.html">情報処理学会</a>
             </li>
         </ul>
-        その他，投稿中1件
+        その他，採択1件
 
         <h2>発表 (Presentations and Posters)</h2>
         <h3>国際発表 (International Presentations and Posters)</h3>
         <ul>
             <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
-                "- Nonlinear Embeddings for Biomolecular Structure Data", 
+                "Nonlinear Embeddings for Biomolecular Structure Data", 
                 In Bayes Comp 2023, Lévi, March 2023.</li>
             <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
                 "Non-linear Embedding for Protein Dynamics by Accelerating Autocorrelation", 
@@ -190,6 +190,28 @@
 
         <h2>特許 (Lisences)</h2>
         その他，申請中1件
+
+
+        <h2>資格（Certificate）</h2>
+        <ul>
+            <li>TOEIC820点</li>
+            <li>実用技能英語検定準1級</li>
+            <li>実用数学技能検定準1級</li>
+            <li>統計検定「統計数理」「統計応用(理工学)」1級</li>
+            <li>高等学校教諭一種免許状（数学）</li>
+            <li>中学教諭一種免許状（数学）</li>
+        </ul>
+
+
+        <h2>TA担当科目</h2>
+        <ul>
+            <li>2023年度：プログラミング演習II，実験データ解析演習，応用プログラミング演習</li>
+            <li>2022年度：プログラミング演習I，現象のモデリングとシミュレーション，実験データ解析演習，応用プログラミング演習</li>
+            <li>2021年度：現象のモデリングとシミュレーション，実験データ解析演習，応用プログラミング演習，現象数理B，学習支援（数学）</li>
+            <li>2020年度：プログラミング演習I，数学解析，実験データ解析演習，微積分演習，複素関数演習，学習支援（数学）</li>
+            <li>2019年度：数学とメディア，数理統計学，数理と可視化，微積分演習，応用プログラミング演習，学習支援（数学）</li>
+        </ul>
+
 
         <h2>連絡先 (Contact)</h2>
         メールアドレス (Mail Adress)：tsuyoshi.ishizone at gmail.com
