--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
                 In International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
                 <a href="https://link.springer.com/chapter/10.1007/978-3-030-58653-9_33">SpringerLink</a></li>
         </ul>
-        その他，投稿中1件
+        その他，投稿中1件，採択1件
         <h3>日本語論文 (Japanese Papers)</h3>
         <ul>
+            <li>
+                <strong>石曽根毅</strong>，樋口知之，中村和幸．
+                生産ラインにおける異常検知・非定常サイクル同定のオンラインシステム，
+                計測自動制御学会論文，Vol. 57, No.3, 2023．
+                <a href="https://www.coronasha.co.jp/np/code/812307/">計測自動制御学会</a>
+            </li>
             <li>
                 大島悠，<strong>石曽根毅</strong>，樋口知之．
                 家庭用スマートメータへの適用を目的とする世帯の在宅推定手法の開発，
@@ -64,7 +70,6 @@
                 <a href="https://www.ipsj.or.jp/dp/contents/publication/51/TR0303-06.html">情報処理学会</a>
             </li>
         </ul>
-        その他，採択1件
 
         <h2>発表 (Presentations and Posters)</h2>
         <h3>国際発表 (International Presentations and Posters)</h3>
@@ -95,6 +100,12 @@
 
         <h3>国内発表 (Japanese Presentations and Posters)</h3>
         <ul>
+            <li><strong>石曽根毅</strong>，松永康祐，渕上壮太郎，中村和幸．
+                潜在時系列モデルによる生体分子構造表現．
+                2023年度統計関連学会連合大会，4FPM2-01，京都・オンライン，2023年9月．</li>
+            <li><strong>石曽根毅</strong>，松永康祐，渕上壮太郎，中村和幸．
+                蛋白質構造ダイナミクスの時構造VAEによる表現学習．
+                人工知能学会全国大会，2N4-GS-10-01，熊本・オンライン，2023年6月</li>
             <li><strong>石曽根毅</strong>，松永康祐，渕上壮太郎，中村和幸．
                 生体分子構造の遅い運動を捉えるための表現学習，
                 第25回情報論的学習理論ワークショップ，Poster No. 2-021，つくば，2022年11月</li>
