--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 In International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
                 <a href="https://link.springer.com/chapter/10.1007/978-3-030-58653-9_33">SpringerLink</a></li>
         </ul>
-        その他，投稿中1件，採択1件
+        その他，投稿中1件，採択2件
         <h3>日本語論文 (Japanese Papers)</h3>
         <ul>
             <li>
                 <strong>石曽根毅</strong>，樋口知之，中村和幸．
                 生産ラインにおける異常検知・非定常サイクル同定のオンラインシステム，
-                計測自動制御学会論文，Vol. 57, No.3, 2023．
+                計測自動制御学会論文，Vol. 59, No.7, pp. 342--352, 2023．
                 <a href="https://www.coronasha.co.jp/np/code/812307/">計測自動制御学会</a>
             </li>
             <li>
@@ -103,6 +103,9 @@
             <li><strong>石曽根毅</strong>，松永康祐，渕上壮太郎，中村和幸．
                 潜在時系列モデルによる生体分子構造表現．
                 2023年度統計関連学会連合大会，4FPM2-01，京都・オンライン，2023年9月．</li>
+            <li>杉浦陸空，<strong>石曽根毅</strong>，中村和幸．
+                視覚情報処理メカニズムの模倣を意図した時系列脳波データの画像化とEfficientGANによる異常波の検出．
+                人工知能学会全国大会，4E3-GS-2-03，熊本・オンライン，2023年6月</li>
             <li><strong>石曽根毅</strong>，松永康祐，渕上壮太郎，中村和幸．
                 蛋白質構造ダイナミクスの時構造VAEによる表現学習．
                 人工知能学会全国大会，2N4-GS-10-01，熊本・オンライン，2023年6月</li>
