--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <header>
-            <div class="container">
+            <div class="header-container">
               <a id="a-title" href="/">
                 <h1>Tsuyoshi Ishizone / 石曽根毅</h1>
               </a>
@@ -48,7 +48,13 @@
 
             <div class="main-content">
                 <h2 id="research-interest">Research Interest / 興味・関心</h2>
-                <p>Time-series Analysis, Spatio-temporal Analysis, Artificial Intelligence, Biophysics, Life Science</p>
+                <ul>
+                    <li>Time-series Analysis, Spatio-temporal Analysis</li>
+                    <li>Machine Learning, Deep Learning</li>
+                    <li>Statistical Inference</li>
+                    <li>Bayesian Statistics</li>
+                    <li>Biophysics, Life Science</li>
+                </ul>
 
                 <h2>Education / 学歴・学位</h2>
                 <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
