--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h3>International Journals</h3>
                 <ul>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, K. Nakamura,
-                        "Ensemble kalman variational objective: a variational inference framework for sequential variational auto-encoders", 
+                        "Ensemble Kalman variational objective: a variational inference framework for sequential variational auto-encoders", 
                         Nonlinear Theory and Its Applications, IEICE, 2023.
                         <a href="https://www.jstage.jst.go.jp/article/nolta/14/4/14_691/_article/-char/en">paper</a>
                         <a href="https://github.com/ZoneMS/EnKO">code</a></li>
