add english description

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
 
                 <h2>Education / 学歴・学位</h2>
                 <!-- <img src="figs/myfig.jpg" alt="顔写真" style="float:left; height:80px;"> -->
+                <h3>For English</h3>
+                <ul>
+                    <li>04/2021-present: Ph.D. student, Mathematical Sciences Program, Graduate School of Advanced Mathematical Sciences, Meiji University</li>
+                    <li>04/2019-03/2021: M.S., Mathematical Sciences Program, Graduate School of Advanced Mathematical Sciences, Meiji University
+                        <ul>
+                            <li>Thesis: A Data-Driven Real-Time Estimation of State Space Model by Locally Linear Approximation</li>
+                            <li>Advisor: <a href="https://www.isc.meiji.ac.jp/~knaka/index.html">Kazuyuki Nakamura</a></li>
+                        </ul>
+                    </li>
+                    <li>04/2015-03/2019: B.S., Department of Mathematical Sciences Based on Modeling and Analysis, School of Interdisciplinary Mathematical Sciences, Meiji University
+                        <ul>
+                            <li>Thesis: Proposal for Data Assimilation Methods Towards Real-Time Estimation</li>
+                            <li>Advisor: <a href="https://www.isc.meiji.ac.jp/~knaka/index.html">Kazuyuki Nakamura</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <h3>For Japanese</h3>
                 <ul>
                     <li>2015年3月：明治大学付属明治高等学校 卒業</li>
                     <li>2019年3月：明治大学 総合数理学部 現象数理学科 卒業（学士 理学）</li>
@@ -67,6 +85,14 @@
 
 
                 <h2 id="work-experience">Work Experience / 職歴</h2>
+                <h3>For English</h3>
+                <ul>
+                    <li>04/2023-present: JSPS DC Research Fellowships</li>
+                    <li>04/2021-03/2023: Research Assosiate, School of Interdisciplinary Mathematical Sciences, Meiji University</li>
+                    <li>05/2019-present: Research Assistant, Faculty of Science and Engineering, Chuo University</li>
+                </ul>
+
+                <h3>For Japanese</h3>
                 <ul>
                     <li>2019年5月〜：中央大学 研究補助員</li>
                     <li>2021年4月〜2023年3月：明治大学 総合数理学部 助手</li>
