--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               </a>
               <h2></h2>
       
-              <section id="downloads">
+              <!-- <section id="downloads">
                 <a href="https://github.com/ZoneTsuyoshi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-              </section>
+              </section> -->
 
               <p>Contact: tsuyoshi [dot] ishizone [at] gmail [dot] com</p>
             </div>
