--- a/index.html
+++ b/index.html
@@ -103,14 +103,18 @@
                 <h2 id="publications">Publications / 論文</h2>
                 <h3>International Journals</h3>
                 <ul>
-                    <li><strong>T. Ishizone</strong>, T. Higuchi, K. Nakamura,
+                    <li>M. Nakashima, M. Miyasaka, N. Satomi, Y. Kobayashi, S. Hirose, M. Saigan, Y. Enta, <strong>T. Ishizone</strong>, K. Nakamura, M. Hata, and N. Tada
+                        "Implications of the En Face View of Transcatheter Heart Valves for Coronary Access Post-TAVR",
+                        <i>J Am Coll Cardiol Intv</i>, 2023.
+                        <a href="https://www.jacc.org/doi/10.1016/j.jcin.2023.08.038">paper</a><a href="https://www.sendai-kousei-hospital.jp/department/cardiovascular/specialty/specialty-as/en-face-view-deriver">calculator</a></li>
+                    <li><strong>T. Ishizone</strong>, T. Higuchi, K. Nakamura.
                         "Ensemble Kalman variational objective: a variational inference framework for sequential variational auto-encoders", 
-                        Nonlinear Theory and Its Applications, IEICE, 2023.
+                        <i>Nonlinear Theory and Its Applications</i>, IEICE, 2023.
                         <a href="https://www.jstage.jst.go.jp/article/nolta/14/4/14_691/_article/-char/en">paper</a>
                         <a href="https://github.com/ZoneMS/EnKO">code</a></li>
                     <li><strong>T. Ishizone</strong>, K. Nakamura.
                         "Real-time Linear Operator Construction and State Estimation with the Kalman Filter",
-                        Journal of Information Processing (JIP), 2022.
+                        <i>Journal of Information Processing (JIP)</i>, 2022.
                         <a href="https://www.jstage.jst.go.jp/article/ipsjjip/30/0/30_888/_article/-char/en">paper</a>
                         <a href="https://github.com/ZoneTsuyoshi/lock">code</a></li>
                 </ul>
@@ -119,16 +123,16 @@
                 <ul>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, K. Okusa, and K. Nakamura. 
                         "An Online System of Detecting Anomalies and Estimating Cycle Times for Production Lines",
-                        In IEEE Industrial Electronics Society (IECON 2022), 2022.
+                        In <i>IEEE Industrial Electronics Society (IECON 2022)</i>, 2022.
                         <a href="https://ieeexplore.ieee.org/document/9969061">paper</a></li>
                     <li>H. Oshima, <strong>T. Ishizone</strong>, K. Nakamura, and T. Higuchi. 
                         "Occupancy Detection for General Households by Bidirectional LSTM with Attention",
-                        In IEEE Industrial Electronics Society (IECON 2022), 2022.
+                        In <i>IEEE Industrial Electronics Society (IECON 2022)</i>, 2022.
                         <a href="https://ieeexplore.ieee.org/document/9968594">paper</a>
                         <a href="https://github.com/oh-yu/deep_occupancy_detection">code</a></li>
                     <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                         “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                        In International Conference on Automatic Control and Soft Computing (CONTROLO 2020), 2020.
+                        In <i>International Conference on Automatic Control and Soft Computing (CONTROLO 2020)</i>, 2020.
                         <a href="https://link.springer.com/chapter/10.1007/978-3-030-58653-9_33">paper</a>
                         <a href="https://github.com/ZoneTsuyoshi/lslock">code</a></li>
                 </ul>
@@ -154,31 +158,31 @@
                 <ul>
                     <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
                         "Biomolecule's Conformational Representations by Latent Time-structured Model", 
-                        In the 12th Conference of the IASC-ARS, Sydney, December 2023.</li>
+                        In <i>the 12th Conference of the IASC-ARS</i>, Sydney, December 2023.</li>
                     <li><strong>T. Ishizone</strong>. 
                         "Representation Learning for Protein Conformational Dynamics", 
-                        In the 7th ZIB-IMI-ISM-NUS-RIKEN-MODAL Workshop on Future algorithms and Applications, Berlin, September 2023.</li>
+                        In <i>the 7th ZIB-IMI-ISM-NUS-RIKEN-MODAL Workshop on Future algorithms and Applications</i>, Berlin, September 2023.</li>
                     <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
                         "Nonlinear Embeddings for Biomolecular Structure Data", 
-                        In Bayes Comp 2023, Lévi, March 2023.</li>
+                        In <i>Bayes Comp 2023</i>, Lévi, March 2023.</li>
                     <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
                         "Non-linear Embedding for Protein Dynamics by Accelerating Autocorrelation", 
                         In The 13-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Taipei, March 2023.</li>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                         "Improving Inference of Time-Series Model by Sequential Bayes Filtering", 
-                        In The 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2022.</li>
+                        In <i>the 12-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online</i>, March 2022.</li>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, and K. Nakamura. 
                         “A Method to Infer Latent Dynamics Model by Combining Deep Neural Networks with Ensemble Kalman Filter”, 
-                        In The 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics, Online, March 2020.</li>
+                        In <i>the 11-th Taiwan-Japan Joint Workshop for Young Scholars in Applied Mathematics</i>, Online, March 2020.</li>
                     <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                         “LSLOCK: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                        In International Conference on Automatic Control and Soft Computing (CONTROLO 2020), Braganza, July 2020.</li>
+                        In <i>International Conference on Automatic Control and Soft Computing (CONTROLO 2020)</i>, Braganza, July 2020.</li>
                     <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                         “A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                        In Bayes Comp 2020, Florida, January 2020.</li>
+                        In <i>Bayes Comp 2020</i>, Florida, January 2020.</li>
                     <li><strong>T. Ishizone</strong>, and K. Nakamura. 
                         “LPSUKF: A Method to Estimate State Space Model by Spatiotemporal Continuity”, 
-                        In International Conference on “Spatio-temporal patterns on various levels of the hierarchy of life” (ICMMA 2019), 
+                        In <i>International Conference on “Spatio-temporal patterns on various levels of the hierarchy of life” (ICMMA 2019)</i>, 
                         Poster no.16, Tokyo, December 2019.</li>
                 </ul>
 
